first-shot/07-Ingress-to-GatewayApi/03-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cka-nginx
spec:
  controllerName: example.com/gateway-controller
