first-shot/07-Ingress-to-GatewayApi/01-apache-deployment.yaml
# apache-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cka-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deploy
  namespace: cka-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"


---

apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: cka-gateway
spec:
  selector:
    app: apache
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
