first-shot/07-Ingress-to-GatewayApi/04-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: cka-gateway
spec:
  gatewayClassName: cka-nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: gateway.example.com
    allowedRoutes:
      namespaces:
        from: All
