first-shot/07-Ingress-to-GatewayApi/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  namespace: cka-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: gateway.example.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service: 
              name: apache-service
              port:
                number: 80
