first-shot/07-Ingress-to-GatewayApi/05-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apache-route
  namespace: cka-gateway
spec:
  parentRefs:
  - name: nginx-gateway
    sectionName: http
  hostnames:
  - "gateway.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: apache-service
      port: 80
